JBERET-570 Configure maven pom to support building with jdk 17