@@ -114,8 +114,19 @@
         <redirectTestOutput>false</redirectTestOutput>
         <javadoc.additional.params>-sourceclasspath ${project.build.outputDirectory}</javadoc.additional.params>
 
-        <!-- Modularized JDK support (various workarounds) - activated via profile -->
-        <modular.jdk.args/>
+        <modular.jdk.args>
+            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.security=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.management/javax.management=ALL-UNNAMED
+            --add-opens=java.naming/javax.naming=ALL-UNNAMED
+        </modular.jdk.args>
+
         <surefire.system.args>${modular.jdk.args}</surefire.system.args>
 
         <maven.compiler.target>11</maven.compiler.target>
